--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,16 @@
       name="keywords"
       content="туризм, Селигер, клуб, отдых, путешествия, приключения"
     />
+    <meta property="og:title" content="Клуб Активного Туризма Селигер" />
+    <meta property="og:description" content="Активный отдых на Селигере" />
+    <meta
+      property="og:image"
+      content="http://127.0.0.1:5500/assets/heroImages/mainImages.webp"
+    />
+    <!-- ПОЛНЫЙ URL! -->
+    <meta property="og:url" content="http://127.0.0.1:5500/index.html" />
+    <!-- ПОЛНЫЙ URL -->
+    <meta property="og:type" content="website" />
     <title>КАТ-Селигер</title>
   </head>
 
